--- a/index.html
+++ b/index.html
@@ -135,28 +135,32 @@
                 <p class="text-sect-one">Product Designer</p>
                 <ul class="social-network-icons">
                   <li class="list-icons">
-                    <a class="link-icons" href=""></a>
-                    <svg class="iconssvg" width: 16; height: 16;>
-                      <use hres="./images/icons.svg#icon-instagram"></use>
-                    </svg>
+                    <a href="" class="link-icons">
+                      <svg class="iconssvg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="list-icons">
-                    <a class="link-icons" href=""></a>
-                    <svg class="iconssvg" width: 16; height: 16;>
-                      <use hres="./images/icons.svg#icon-twitter"></use>
-                    </svg>
+                    <a href="" class="link-icons">
+                      <svg class="iconssvg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="list-icons">
-                    <a class="link-icons" href=""></a>
-                    <svg class="iconssvg" width: 16; height: 16;>
-                      <use hres="./images/icons.svg#icon-facebook"></use>
-                    </svg>
+                    <a href="" class="link-icons">
+                      <svg class="iconssvg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="list-icons">
-                    <a class="link-icons" href=""></a>
-                    <svg class="iconssvg" width: 16; height: 16;>
-                      <use hres="./images/icons.svg#icon-twitter"></use>
-                    </svg>
+                    <a href="" class="link-icons">
+                      <svg class="iconssvg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -172,28 +176,32 @@
                 <p class="text-sect-one">Frontend Developer</p>
                 <ul class="social-network-icons">
                   <li class="list-icons">
-                    <a class="link-icons" href=""></a>
-                    <svg class="iconssvg">
-                      <use hres="./images/icons.svg#icon-instagram"></use>
-                    </svg>
+                    <a href="" class="link-icons">
+                      <svg class="iconssvg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="list-icons">
-                    <a class="link-icons" href=""></a>
-                    <svg class="iconssvg">
-                      <use hres="./images/icons.svg#icon-twitter"></use>
-                    </svg>
+                    <a href="" class="link-icons">
+                      <svg class="iconssvg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="list-icons">
-                    <a class="link-icons" href=""></a>
-                    <svg class="iconssvg">
-                      <use hres="./images/icons.svg#icon-facebook"></use>
-                    </svg>
+                    <a href="" class="link-icons">
+                      <svg class="iconssvg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="list-icons">
-                    <a class="link-icons" href=""></a>
-                    <svg class="iconssvg">
-                      <use hres="./images/icons.svg#icon-twitter"></use>
-                    </svg>
+                    <a href="" class="link-icons">
+                      <svg class="iconssvg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -209,28 +217,32 @@
                 <p class="text-sect-one">Marketing</p>
                 <ul class="social-network-icons">
                   <li class="list-icons">
-                    <a class="link-icons" href=""></a>
-                    <svg class="iconssvg">
-                      <use hres="./images/icons.svg#icon-instagram"></use>
-                    </svg>
+                    <a href="" class="link-icons">
+                      <svg class="iconssvg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="list-icons">
-                    <a class="link-icons" href=""></a>
-                    <svg class="iconssvg">
-                      <use hres="./images/icons.svg#icon-twitter"></use>
-                    </svg>
+                    <a href="" class="link-icons">
+                      <svg class="iconssvg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="list-icons">
-                    <a class="link-icons" href=""></a>
-                    <svg class="iconssvg">
-                      <use hres="./images/icons.svg#icon-facebook"></use>
-                    </svg>
+                    <a href="" class="link-icons">
+                      <svg class="iconssvg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="list-icons">
-                    <a class="link-icons" href=""></a>
-                    <svg class="iconssvg">
-                      <use hres="./images/icons.svg#icon-twitter"></use>
-                    </svg>
+                    <a href="" class="link-icons">
+                      <svg class="iconssvg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -246,28 +258,32 @@
                 <p class="text-sect-one">UI Designer</p>
                 <ul class="social-network-icons">
                   <li class="list-icons">
-                    <a class="link-icons" href=""></a>
-                    <svg class="iconssvg">
-                      <use hres="./images/icons.svg#icon-instagram"></use>
-                    </svg>
+                    <a href="" class="link-icons">
+                      <svg class="iconssvg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="list-icons">
-                    <a class="link-icons" href=""></a>
-                    <svg class="iconssvg">
-                      <use hres="./images/icons.svg#icon-twitter"></use>
-                    </svg>
+                    <a href="" class="link-icons">
+                      <svg class="iconssvg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="list-icons">
-                    <a class="link-icons" href=""></a>
-                    <svg class="iconssvg">
-                      <use hres="./images/icons.svg#icon-facebook"></use>
-                    </svg>
+                    <a href="" class="link-icons">
+                      <svg class="iconssvg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="list-icons">
-                    <a class="link-icons" href=""></a>
-                    <svg class="iconssvg">
-                      <use hres="./images/icons.svg#icon-twitter"></use>
-                    </svg>
+                    <a href="" class="link-icons">
+                      <svg class="iconssvg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -364,7 +380,7 @@
     </main>
     <!-- ============ FOOTER ============= -->
     <footer class="footer">
-      <div class="container">
+      <div class="container-footer">
         <a class="logo-footer" href="./index.html"
           >Web<span class="logo-style-footer">Studio</span></a
         >
@@ -372,6 +388,39 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+      </div>
+      <div class="container-footertwo">
+        <h3 class="title-footer">Social media</h3>
+        <ul class="icons-footer">
+          <li class="list-icons-footer">
+            <a href="" class="footer-link-icons">
+              <svg class="iconssvg" width="16" height="16">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="list-icons-footer">
+            <a href="" class="footer-link-icons">
+              <svg class="iconssvg" width="16" height="16">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="list-icons-footer">
+            <a href="" class="footer-link-icons">
+              <svg class="iconssvg" width="16" height="16">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="list-icons-footer">
+            <a href="" class="footer-link-icons">
+              <svg class="iconssvg" width="16" height="16">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
