--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
           <ul class="sect-two-list">
             <li class="sect-two-item">
               <div class="container-secttwo">
-                <img src="/images/svg-icon/antenna.svg" alt="Antenna" />
+                <svg class="icon-secttwo" width="64" height="64">
+                  <use href="/images/svg-icon#icon-antenna"></use>
+                </svg>
               </div>
               <h3 class="title-three">Strategy</h3>
               <p class="text-sect-one">
@@ -88,7 +90,9 @@
             </li>
             <li class="sect-two-item">
               <div class="container-secttwo">
-                <img src="/images/svg-icon/clock.svg" alt="Clock" />
+                <svg class="icon-secttwo" width="64" height="64">
+                  <use href="/images/svg-icon#icon-clock"></use>
+                </svg>
               </div>
               <h3 class="title-three">Punctuality</h3>
               <p class="text-sect-one">
@@ -98,7 +102,9 @@
             </li>
             <li class="sect-two-item">
               <div class="container-secttwo">
-                <img src="/images/svg-icon/diagram.svg" alt="Diagram" />
+                <svg class="icon-secttwo" width="64" height="64">
+                  <use href="/images/svg-icon#icon-diagram"></use>
+                </svg>
               </div>
               <h3 class="title-three">Diligence</h3>
               <p class="text-sect-one">
@@ -108,7 +114,9 @@
             </li>
             <li class="sect-two-item">
               <div class="container-secttwo">
-                <img src="/images/svg-icon/astronaut.svg" alt="Astronaut" />
+                <svg class="icon-secttwo" width="64" height="64">
+                  <use href="/images/svg-icon#icon-astronaut"></use>
+                </svg>
               </div>
               <h3 class="title-three">Technologies</h3>
               <p class="text-sect-one">
@@ -297,78 +305,120 @@
           <h2 class="title-four">Our Portfolio</h2>
           <ul class="sect-four-list">
             <li class="sect-four-item">
-              <img
-                class="img-block"
-                src="./images/webstudio/ourportfolio/banking-app.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+              <div class="card">
+                <img
+                  class="img-block"
+                  src="./images/webstudio/ourportfolio/banking-app.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <p class="paragraf-card">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="container-sect-four">
                 <h3 class="title-sect-four">Banking App</h3>
                 <p class="text-sect-four">App</p>
               </div>
             </li>
             <li class="sect-four-item">
-              <img
-                class="img-block"
-                src="./images/webstudio/ourportfolio/cashless-payment.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="card">
+                <img
+                  class="img-block"
+                  src="./images/webstudio/ourportfolio/cashless-payment.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <p class="paragraf-card">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="container-sect-four">
                 <h3 class="title-sect-four">Cashless Payment</h3>
                 <p class="text-sect-four">Marketing</p>
               </div>
             </li>
             <li class="sect-four-item">
-              <img
-                class="img-block"
-                src="./images/webstudio/ourportfolio/meditation-app.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
+              <div class="card">
+                <img
+                  class="img-block"
+                  src="./images/webstudio/ourportfolio/meditation-app.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <p class="paragraf-card">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="container-sect-four">
                 <h3 class="title-sect-four">Meditation App</h3>
                 <p class="text-sect-four">App</p>
               </div>
             </li>
             <li class="sect-four-item">
-              <img
-                class="img-block"
-                src="./images/webstudio/ourportfolio/taxi-service.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+              <div class="card">
+                <img
+                  class="img-block"
+                  src="./images/webstudio/ourportfolio/taxi-service.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <p class="paragraf-card">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="container-sect-four">
                 <h3 class="title-sect-four">Taxi Service</h3>
                 <p class="text-sect-four">Marketing</p>
               </div>
             </li>
             <li class="sect-four-item">
-              <img
-                class="img-block"
-                src="./images/webstudio/ourportfolio/screen-illustrations.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="card">
+                <img
+                  class="img-block"
+                  src="./images/webstudio/ourportfolio/screen-illustrations.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <p class="paragraf-card">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="container-sect-four">
                 <h3 class="title-sect-four">Screen Illustrations</h3>
                 <p class="text-sect-four">Design</p>
               </div>
             </li>
             <li class="sect-four-item">
-              <img
-                class="img-block"
-                src="./images/webstudio/ourportfolio/online-courses.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
+              <div class="card">
+                <img
+                  class="img-block"
+                  src="./images/webstudio/ourportfolio/online-courses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <p class="paragraf-card">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="container-sect-four">
                 <h3 class="title-sect-four">Online Courses</h3>
                 <p class="text-sect-four">Marketing</p>
@@ -390,32 +440,32 @@
         </p>
       </div>
       <div class="container-footertwo">
-        <h3 class="title-footer">Social media</h3>
+        <p class="texttwo-footer">Social media</p>
         <ul class="icons-footer">
           <li class="list-icons-footer">
             <a href="" class="footer-link-icons">
-              <svg class="iconssvg" width="16" height="16">
+              <svg class="iconssvg-footer" width="24" height="24">
                 <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li class="list-icons-footer">
             <a href="" class="footer-link-icons">
-              <svg class="iconssvg" width="16" height="16">
+              <svg class="iconssvg-footer" width="24" height="24">
                 <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
           <li class="list-icons-footer">
             <a href="" class="footer-link-icons">
-              <svg class="iconssvg" width="16" height="16">
+              <svg class="iconssvg-footer" width="24" height="24">
                 <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="list-icons-footer">
             <a href="" class="footer-link-icons">
-              <svg class="iconssvg" width="16" height="16">
+              <svg class="iconssvg-footer" width="24" height="24">
                 <use href="./images/icons.svg#icon-linkedin"></use>
               </svg>
             </a>
