--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <li class="sect-two-item">
               <div class="container-secttwo">
                 <svg class="icon-secttwo" width="64" height="64">
-                  <use href="/images/svg-icon#icon-antenna"></use>
+                  <use href="./images/iconssecttwo.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="title-three">Strategy</h3>
@@ -91,7 +91,7 @@
             <li class="sect-two-item">
               <div class="container-secttwo">
                 <svg class="icon-secttwo" width="64" height="64">
-                  <use href="/images/svg-icon#icon-clock"></use>
+                  <use href="./images/svg-icon#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="title-three">Punctuality</h3>
@@ -103,7 +103,7 @@
             <li class="sect-two-item">
               <div class="container-secttwo">
                 <svg class="icon-secttwo" width="64" height="64">
-                  <use href="/images/svg-icon#icon-diagram"></use>
+                  <use href="./images/svg-icon#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="title-three">Diligence</h3>
@@ -115,7 +115,7 @@
             <li class="sect-two-item">
               <div class="container-secttwo">
                 <svg class="icon-secttwo" width="64" height="64">
-                  <use href="/images/svg-icon#icon-astronaut"></use>
+                  <use href="./images/svg-icon#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="title-three">Technologies</h3>
@@ -431,13 +431,15 @@
     <!-- ============ FOOTER ============= -->
     <footer class="footer">
       <div class="container-footer">
-        <a class="logo-footer" href="./index.html"
-          >Web<span class="logo-style-footer">Studio</span></a
-        >
-        <p class="text-footer">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="logo-text">
+          <a class="logo-footer" href="./index.html"
+            >Web<span class="logo-style-footer">Studio</span></a
+          >
+          <p class="text-footer">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
       </div>
       <div class="container-footertwo">
         <p class="texttwo-footer">Social media</p>
