--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
           <a class="logo-header" href="./index.html"
             >Web<span class="logo-style">Studio</span></a
           >
+
           <ul class="nav-list">
             <li class="nav-item">
-              <a class="nav-item-link" href="./index.html">Studio</a>
+              <a class="nav-item-link-studio" href="./index.html">Studio</a>
             </li>
             <li class="nav-item">
               <a class="nav-item-link" href="">Portfolio</a>
