--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <li class="sect-two-item">
               <div class="container-secttwo">
                 <svg class="icon-secttwo" width="64" height="64">
-                  <use href="./images/svg-icon#icon-clock"></use>
+                  <use href="./images/iconssecttwo.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="title-three">Punctuality</h3>
@@ -104,7 +104,7 @@
             <li class="sect-two-item">
               <div class="container-secttwo">
                 <svg class="icon-secttwo" width="64" height="64">
-                  <use href="./images/svg-icon#icon-diagram"></use>
+                  <use href="./images/iconssecttwo.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="title-three">Diligence</h3>
@@ -116,7 +116,7 @@
             <li class="sect-two-item">
               <div class="container-secttwo">
                 <svg class="icon-secttwo" width="64" height="64">
-                  <use href="./images/svg-icon#icon-astronaut"></use>
+                  <use href="./images/iconssecttwo.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="title-three">Technologies</h3>
