--- a/index.html
+++ b/index.html
@@ -431,47 +431,49 @@
     </main>
     <!-- ============ FOOTER ============= -->
     <footer class="footer">
-      <div class="container-footer">
-        <a class="logo-footer" href="./index.html"
-          >Web<span class="logo-style-footer">Studio</span></a
-        >
-        <p class="text-footer">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
-      <div class="container-footertwo">
-        <p class="texttwo-footer">Social media</p>
-        <ul class="icons-footer">
-          <li class="list-icons-footer">
-            <a href="" class="footer-link-icons">
-              <svg class="iconssvg-footer" width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="list-icons-footer">
-            <a href="" class="footer-link-icons">
-              <svg class="iconssvg-footer" width="24" height="24">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="list-icons-footer">
-            <a href="" class="footer-link-icons">
-              <svg class="iconssvg-footer" width="24" height="24">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="list-icons-footer">
-            <a href="" class="footer-link-icons">
-              <svg class="iconssvg-footer" width="24" height="24">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+      <div class="footcont">
+        <div class="container-footer">
+          <a class="logo-footer" href="./index.html"
+            >Web<span class="logo-style-footer">Studio</span></a
+          >
+          <p class="text-footer">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="container-footertwo">
+          <p class="texttwo-footer">Social media</p>
+          <ul class="icons-footer">
+            <li class="list-icons-footer">
+              <a href="" class="footer-link-icons">
+                <svg class="iconssvg-footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="list-icons-footer">
+              <a href="" class="footer-link-icons">
+                <svg class="iconssvg-footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="list-icons-footer">
+              <a href="" class="footer-link-icons">
+                <svg class="iconssvg-footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="list-icons-footer">
+              <a href="" class="footer-link-icons">
+                <svg class="iconssvg-footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
